# nucmass

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: amdc_ame2012_nubase.mas12  amdc_ame2012_nubase_mas12.csv  amdc_ame2012_rct1.mas12  amdc_ame2012_rct2.mas12  ame2020_masses.csv  element_descriptions.csv  frdm2012_masses.csv
docs/: Makefile  changelog.rst  cli.rst  conf.py  data_pipeline.md  database_schema.md  index.md  index.rst  installation.rst  quickstart.rst  reproducing_results.md
docs/api/: database.rst  exceptions.rst  parsers.rst  plotting.rst
notebooks/: explore_nuclear_data.html  explore_nuclear_data.ipynb
scripts/: download_nuclear_data.py  inspect_frdm2012_pdf.py  reproduce_frdm2012_figures.py
src/nucmass/: __init__.py  ame2020.py  cli.py  config.py  database.py  exceptions.py  frdm2012.py  nubase2020.py  plotting.py  utils.py
tests/: test_coverage_boost.py  test_coverage_boost2.py  test_coverage_boost3.py  test_new_features.py  test_nuclear_data.py
