[project]
name = "nucmass"
version = "1.1.0"
description = "Nuclear mass data toolkit for researchers - Parse AME2020 experimental and FRDM2012 theoretical mass tables"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = [
    "nuclear physics",
    "atomic mass",
    "AME2020",
    "FRDM2012",
    "mass evaluation",
    "nuclear data",
    "astrophysics",
    "r-process",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pandas>=2.0,<3.0",
    "requests>=2.31,<3.0",
    "duckdb>=1.0,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "click>=8.0,<9.0",
    "tqdm>=4.60,<5.0",
]

[project.scripts]
nucmass = "nucmass.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "ipython>=8.0,<9.0"]
notebook = ["jupyterlab>=4.0,<5.0", "ipykernel>=6.0,<7.0"]
pdf = ["nbconvert[webpdf]>=7.0,<8.0"]
docs = ["sphinx>=7.0,<8.0", "sphinx-autobuild>=2024.0"]
frdm2012 = ["pdfplumber>=0.10,<1.0"]  # Only needed for FRDM2012 PDF extraction
all = ["nucmass[dev,notebook,pdf,docs,frdm2012]"]

[project.urls]
Homepage = "https://github.com/unixtime/nucmass"
Documentation = "https://github.com/unixtime/nucmass#readme"
Repository = "https://github.com/unixtime/nucmass"
Issues = "https://github.com/unixtime/nucmass/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nucmass"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
